main problems solved

--- a/index.html
+++ b/index.html
@@ -13,12 +13,29 @@
 
 <body>
   <div class="wrapper">
-    <div class="test header"><h1>Etch-A-Sketch</h1></div>
-    <div class="test left-menu">
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>4</button>
+    <div class="test header">
+      <h1>Etch-A-Sketch</h1>
+    </div>
+    <div class="test left-menu btn-group">
+        <span>
+          <label for="pen-color">Pen:</label>
+          <input type="color" class="pen-color" name="pen-color">
+        </span>
+        <span>
+          <label for="canvas-color">Canvas:</label>
+          <input type="color" class='canvas-color' value="#ffffff" name="canvas-color">
+        </span>
+        <br>
+      <button class="button rainbow-mode">Rainbow</button>
+      <button class="button shadow-mode">Shadow</button>
+      <button class="button">Button 3</button>
+      <button class="button">Button 4</button>
+      <br>
+      <div><input type="range" min="1" max="60" step="1" value="16" class="slider"></div>
+      <div class="range-container">
+       Size: <span class="current-value"></span> x <span class="current-value"></span>
+      </div>
+
     </div>
     <div class="grid-window"></div>
   </div>
