--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <br>
       <button class="button rainbow-mode">Rainbow</button>
       <button class="button shadow-mode">Shadow</button>
-      <button class="button">Button 3</button>
-      <button class="button">Button 4</button>
+      <button class="button erase-mode">Eraser</button>
+      <button class="button clear">Clear</button>
       <br>
       <div><input type="range" min="1" max="60" step="1" value="16" class="slider"></div>
       <div class="range-container">
