--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Etch-A-Sketch</title>
   <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
-  <link rel="stylesheet" href="./external/style.css">
-  <script defer src="./external/script.js"></script>
+  <link rel="stylesheet" href="./style.css">
+  <script defer src="./script.js"></script>
 </head>
 
 <body>
